python-cpl (0.3.2-2) maverick; urgency=low

  * Fix log level filter

 -- Ole Streicher <python-cpl@liska.ath.cx>  Mon, 25 Oct 2010 09:33:00 +0200

python-cpl (0.3.1-2) maverick; urgency=low

  * Sync with upstream: limit max number of threads

 -- Ole Streicher <python-cpl@liska.ath.cx>  Mon, 18 Oct 2010 10:57:58 +0200

python-cpl (0.3.0-1) maverick; urgency=low

  * Sync with upstream: support python-style logging

 -- Ole Streicher <python-cpl@liska.ath.cx>  Mon, 11 Oct 2010 09:30:00 +0200

python-cpl (0.2.1-1) maverick; urgency=low

  * Updated to latest git

 -- Ole Streicher <python-cpl@liska.ath.cx>  Wed, 22 Sep 2010 17:45:00 +0200

python-cpl (0.2.0-5) maverick; urgency=low

  * Use setuptools instead of distutils

 -- Ole Streicher <python-cpl@liska.ath.cx>  Wed, 22 Sep 2010 17:45:00 +0200

python-cpl (0.2.0-3) maverick; urgency=low

  * Try to fix wrong install path site-packages 
	(must be in dist-packages for python2.6).

 -- Ole Streicher <python-cpl@liska.ath.cx>  Wed, 22 Sep 2010 09:30:00 +0200

python-cpl (0.2.0-2) maverick; urgency=low

  * Maverick (10.10) version

 -- Ole Streicher <python-cpl@liska.ath.cx>  Tue, 21 Sep 2010 09:01:00 +0200

python-cpl (0.2.0-1) lucid; urgency=low

  * Many bugfixes, parameter and tag names in Recipe.__call_ are now prefixed.

 -- Ole Streicher <python-cpl@liska.ath.cx>  Thu, 16 Sep 2010 16:00:00 +0200

python-cpl (0.1.0-4) lucid; urgency=low

  * Add Python-dev to the build dependencies

 -- Ole Streicher <python-cpl@liska.ath.cx>  Tue, 14 Sep 2010 17:09:00 +0200

python-cpl (0.1.0-3) lucid; urgency=low

  * Use pycentral instead of pysupport to get rid of pyversion

 -- Ole Streicher <python-cpl@liska.ath.cx>  Tue, 14 Sep 2010 16:37:00 +0200

python-cpl (0.1.0-2) lucid; urgency=low

  * Added dependency to cdbs

 -- Ole Streicher <python-cpl@liska.ath.cx>  Tue, 14 Sep 2010 15:45:00 +0200

python-cpl (0.1.0-1) lucid; urgency=low

  * Initial build
